--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,6 @@
 
 		md-autocomplete button { display: none !important; }
 
-		.dropdown-toggle {
-			width:100%;
-		}
-		#dropdown{
-			background-color: white;
-		}
 
 		.glyphicon-star {
 			color: yellow;
@@ -164,7 +158,7 @@
 </script>
 
 	<div class="container" style="margin-top:50px; margin-bottom:50px">
-		<div class="panel panel-default" layout = "column" style="padding:40px"ng-cloak>
+		<div class="panel panel-default" layout = "column" style="padding:40px" ng-cloak>
 			<h3 class="text-center">Stock Market Search</h3>
 			<form name="autocompleteForm" ng-submit = "$event.preventDefault()" novalidate>
 				<div class="row">
@@ -223,38 +217,18 @@
 	        	<div class="container">
 	        	<div class="row" style="font-weight: bold;position: relative; margin-bottom:20px">
 	        		<div class="col-sm-1">
-		        		Sort By
+							  <label for="sortBy">Sort by</label>
 							</div>
-							<div class="dropdown col-sm-3">
-							  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-							    Dropdown
-							    <span class="caret"></span>
-							  </button>
-							  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-							    <li><a href="#">Default</a></li>
-							    <li><a href="#">Symbol</a></li>
-							    <li><a href="#">Price</a></li>
-							    <li><a href="#">Change</a></li>
-							    <li><a href="#">Change Percent</a></li>
-							    <li><a href="#">Volume</a></li>
-							  </ul>
-        			</div>
+							<div class="form-group col-sm-2">
+							  <select ng-options="sorting as sorting for sorting in sortings" class="form-control" id="sortBy" ng-model="sortBy" ng-change="ctrl.sort(sortBy, order)" >
+							  </select>
+							</div>
 	        		<div class="col-sm-1">
-		        		Order
-	        		</div>
-        			<div class="dropdown col-sm-3">
-							  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-							    Dropdown
-							    <span class="caret"></span>
-							  </button>
-							  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-							    <li><a href="#">Default</a></li>
-							    <li><a href="#">Symbol</a></li>
-							    <li><a href="#">Price</a></li>
-							    <li><a href="#">Change</a></li>
-							    <li><a href="#">Change Percent</a></li>
-							    <li><a href="#">Volume</a></li>
-							  </ul>
+							  <label for="sortBy">Sort by</label>
+							</div>
+							<div class="form-group col-sm-2">
+							  <select ng-options="ordering as ordering for ordering in orderings" class="form-control" id="order" ng-model="order" ng-change="ctrl.sort(sortBy, order)" >
+							  </select>
 							</div>
 	        	</div>
 	        	</div>
@@ -274,7 +248,7 @@
 				      	</td>
 				      	<td ng-if="favorite.change < 0" style="color:red">{{favorite.change}} ({{favorite.changePercent}}%) <div class="percent-arrow" ng-if="favorite.change < 0"><img class="percent-arrow-image" ng-src="http://cs-server.usc.edu:45678/hw/hw8/images/Down.png"></div>
 				      	</td>
-				      	<td>{{favorite.stockPrice}}</td>
+				      	<td>{{favorite.volume}}</td>
 				      	<td><button class="btn btn-default" ng-click="ctrl.updateFavorites(favorite.symbol)"><span class="glyphicon glyphicon-trash"></span></button></td>
 				      </tr>
 					  </table>
