autocomplete fixed rate limit

--- a/public/index.html
+++ b/public/index.html
@@ -171,10 +171,9 @@
 							md-input-class="form-control"
 							md-input-name="autocomplete"
 							md-selected-item = "ctrl.selectedItem"
-							md-search-text-change = "ctrl.querySearch(ctrl.searchText)"
 							md-search-text = "ctrl.searchText"
 							md-selected-item-change = "ctrl.selectedItemChange(item)"
-							md-items = "item in ctrl.results"
+							md-items = "item in ctrl.querySearch(ctrl.searchText)"
 							md-item-text = "item.Symbol"
 							md-min-length = "1"
 							md-clear-button="false"
