serve static file

--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
 	        <div class="panel-heading row " style="position: relative; height: 55px; text-align:center;">
     				<span class="col" style="display:inline;font-weight: bold;font-size: 14px;position: absolute;top: 20px;">Stock Detail</span>
   					<div class="col" style="display:inline; position:absolute; right:10px;">
-							<button class="btn btn-default" ng-click="view.slide='left'"><span class="glyphicon glyphicon-chevron-left"></span></button>
+							<button class="btn btn-default" ng-click="ctrl.showFavorites()"><span class="glyphicon glyphicon-chevron-left"></span></button>
 	        	</div>
 	        </div>
 	        <div class="panel-body">
