--- a/public/index.html
+++ b/public/index.html
@@ -306,7 +306,8 @@
 									<div class="progress" ng-show="loadingDetail">
   										<div class="progress-bar progress-bar-striped progress-bar-animated active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
 									</div>	
-						  		<table class="table table-striped col" ng-hide="loadingDetail">						      
+									<div class="alert alert-danger" ng-show="error.Price" role="alert">Error! Failed to get Stock data.</div>								  	
+						  		<table class="table table-striped col" ng-hide="loadingDetail || error.Price">						      
 										<tr>
 							        <th>Stock Ticker Symbol</th>
 							        <td>{{symbol}}</td>
@@ -359,17 +360,35 @@
 									</ul>
 									<div class="tab-content">
 										<div class="progress" ng-show="loadingCharts">
-	  										<div class="progress-bar progress-bar-striped progress-bar-animated active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+											<div class="progress-bar progress-bar-striped progress-bar-animated active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
 										</div>
-									  <div id="Price-Chart" ng-hide="loadingCharts" class="tab-pane in active"></div>
-									  <div id="SMA-Chart" ng-hide="loadingCharts" class="tab-pane in "></div>
-									  <div id="EMA-Chart" ng-hide="loadingCharts" class="tab-pane in "></div>
-									  <div id="STOCH-Chart" ng-hide="loadingCharts" class="tab-pane in "></div>
-									  <div id="RSI-Chart" ng-hide="loadingCharts" class="tab-pane in "></div>
-									  <div id="ADX-Chart" ng-hide="loadingCharts" class="tab-pane in "></div>
-									  <div id="CCI-Chart" ng-hide="loadingCharts" class="tab-pane in "></div>
-									  <div id="BBANDS-Chart" ng-hide="loadingCharts" class="tab-pane in "></div>
-									  <div id="MACD-Chart" ng-hide="loadingCharts" class="tab-pane in "></div>
+									  <div id="Price-Chart" ng-hide="loadingCharts" class="tab-pane in active">
+										  <div class="alert alert-danger" ng-show="error.Price" role="alert">Error! Failed to get Price data.</div>								  	
+									  </div>
+									  <div id="SMA-Chart" ng-hide="loadingCharts" class="tab-pane in ">
+										  <div class="alert alert-danger" ng-show="error.SMA" role="alert">Error! Failed to get SMA data.</div>								  	
+									  </div>
+									  <div id="EMA-Chart" ng-hide="loadingCharts" class="tab-pane in ">
+										  <div class="alert alert-danger" ng-show="error.EMA" role="alert">Error! Failed to get EMA data.</div>
+									  </div>
+									  <div id="STOCH-Chart" ng-hide="loadingCharts" class="tab-pane in ">
+										  <div class="alert alert-danger" ng-show="error.STOCH" role="alert">Error! Failed to get STOCH data.</div>								  	
+									  </div>
+									  <div id="RSI-Chart" ng-hide="loadingCharts" class="tab-pane in ">
+									  	<div class="alert alert-danger" ng-show="error.RSI" role="alert">Error! Failed to get RSI data.</div>
+									  </div>
+									  <div id="ADX-Chart" ng-hide="loadingCharts" class="tab-pane in ">
+									  	<div class="alert alert-danger" ng-show="error.ADX" role="alert">Error! Failed to get ADX data.</div>
+									  </div>
+									  <div id="CCI-Chart" ng-hide="loadingCharts" class="tab-pane in ">
+									  	<div class="alert alert-danger" ng-show="error.CCI" role="alert">Error! Failed to get CCI data.</div>
+									  </div>
+									  <div id="BBANDS-Chart" ng-hide="loadingCharts" class="tab-pane in ">
+									  	<div class="alert alert-danger" ng-show="error.BBANDS" role="alert">Error! Failed to get BBANDS data.</div>
+									  </div>
+									  <div id="MACD-Chart" ng-hide="loadingCharts" class="tab-pane in ">
+									  	<div class="alert alert-danger" ng-show="error.MACD" role="alert">Error! Failed to get MACD data.</div>
+									  </div>
 								  </div>
 							  </div>
 						  </div>
@@ -378,13 +397,17 @@
 							<div class="progress" ng-show="loadingHistorical">
 								<div class="progress-bar progress-bar-striped progress-bar-animated active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
 							</div>	
+						  <div class="alert alert-danger" ng-show="error.Price" role="alert">Error! Failed to get Historical data.</div>									  	
 					  	<div id="historicalChart" ng-hide="loadingHistorical"></div>
 					  </div>
 					  <div class="tab-pane in" id="news">
 							<div class="progress" ng-show="loadingNews">
 								<div class="progress-bar progress-bar-striped progress-bar-animated active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
 							</div>	
+						  <div class="alert alert-danger" ng-show="error['News']" role="alert">Error! Failed to get News data.</div>	  	
+
 							<div ng-repeat="n in news track by $index" ng-hide="loadingNews">
+
 							  <div class="well well-lg" >
 							  	<a target="_blank" href={{n.link}} style="font-size:18px">{{n.title}}</a><br><br>
 							  	<strong>{{n.author}}</strong><br><br>
